# nuSTORM

./: .gitignore  README.md  jobsList.md  startup.bash
00-Documentation/: nuSimRuns.tex
00-Documentation/2021-02-20-FirstSimu/: Concatenated-bibliography.bib  nuSIM-doc-01.bbl  nuSIM-doc-1.bbl  nuSIM-doc-1.tex
00-Documentation/2021-03-05-GettingGoing/: Concatenated-bibliography.bib  nuSIM-doc-02-r1.bbl
01-Code/: MuonConst.py  MuonDecay.py  NeutrinoEventInstance.py  PionConst.py  PionDecay.py  PionEventInstance.py  PionTimeDistribution.py  PionTimeStructure.py  Plots.py  Simulation.py  eventHistory.py  mu4ClDmo.py  muon.py  neutrino.py  ntupleMake.py  nuSTORMPrdStrght.py  nuSTORMTrfLine.py  particle.py  pion.py  plane.py  traceSpace.py
01-nuSIM/: nuSTORMTrfLineCmplx.py  setEnv.bash  startup.bash
01-nuSIM/01-Code/: MuonBeam4CoolingDemo.py  MuonDecay.py  NeutrinoEventInstance.py  PionConst.py  PionDecay.py  PionEventInstance.py  PionTimeDistribution.py  RandomGenerator.py  Simulation.py  muon.py  (+8 more)
01-nuSIM/21-Detector/step_final_SD/source/: CMakeLists.txt  init_vis.mac  triangles.cc  vis.mac
01-nuSIM/21-Detector/step_final_SD/source/include/: stepSD.hh  trianglesDetectorConstruction.hh  trianglesEventAction.hh  trianglesMagneticField.hh  trianglesRunAction.hh  trianglesScintHit.hh
01-nuSIM/21-Detector/step_final_SD/source/src/: trianglesActionInitialization.cc  trianglesDetectorConstruction.cc  trianglesEventAction.cc  trianglesMagneticField.cc  trianglesPrimaryGeneratorAction.cc  trianglesRunAction.cc  trianglesScintHit.cc
02-Tests/: FluxCalcOutline.py  MuonBeam4CoolingDemoTst.py  MuonConstTst.py  MuonDecayTrncTst.py  MuonDecayTst.py  NeutrinoEventInstanceTst.py  PionConstTst.py  PionDecayTrncTst.py  PionDecayTst.py  PionEventInstanceTst.py  PionTimeDistributionTst.py  RunSimulation.py  SimulationTst.py  dummyData.csv  eventHistoryTst.py  muonTst.py  neutrinoTst.py  nuSTORMPrdStrghtTst.py  nuSTORMTrfLineTst.py  particleTst.py  pionTst.py  traceSpaceTst.py
02-nuAnalysis/: compile-tst.bash  compile.bash
03-Integration-test/: runTests.py
04-Studies/: README.md  analyseEH.py  normalisation.py
11-Parameters/: nuSTORM-Muons4CoolingDemo-Params-v1.0.xlsx  nuSTORM-PrdStrght-Params-v1.0.csv  nuSTORM-PrdStrght-Params-v1.0.xlsx  nuSTORM-TrfLine-Params-v1.0.csv  nuSTORM-TrfLine-Params-v1.0.xlsx
31-Target/: README.md  nuSTORMTarget.py
Scratch/: ReadMe.txt
(+91 files in other folders)
